# stageflow

./: .env  .gitignore  .zshrc  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.dev.txt
alembic/: env.py
alembic/versions/: 3efab47514c1_initial_schema.py
examples/: delivery_workflow.py
examples/dotfiles/: delivery.dot
scripts/: create_tables.py
stageflow/api/: app.py  dependencies.py  register_exception_handler.py  schemas.py  workflows_loader.py
stageflow/api/routers/: instances_router.py  workflow_router.py
stageflow/core/domain/: context.py
stageflow/core/domain/errors/: exceptions.py
stageflow/core/domain/models/: models.py  workflow.py
stageflow/core/domain/validator/: workflow_definition_validation.py
stageflow/engine/: core_engine.py
stageflow/hooks/: base_hooks.py
stageflow/hooks/builtin/: audit_hook.py  web_hook.py
stageflow/repository/: in_memory_repo.py  memory.py  transaction_record_repo.py  workflow_instance_repo.py  workflow_repo.py
stageflow/repository/base/: base_repository.py
stageflow/repository/postgres/: db.py  history_repository.py  instance_repository.py  mapper.py  models.py
stageflow/rules/: base_rule.py  metadata_rule.py  rule.py  time_window_rule.py
stageflow/service/: __init__.py  stageflow.py
stageflow/visualization/: graphviz_exporter.py
stageflow/workflows/: delivery_workflow.py
tests/: test_hooks.py  test_postgres_mapper.py  test_rules.py  test_workflow_engine.py  test_workflow_validation.py
