[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stageflow"
version = "0.1.0"
description = "A configurable workflow and lifecycle engine for backend systems"
authors = [{name = "Shyam Venkat"}]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["stageflow*"]